--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="controls_btns">
             <button id="jsMode">Fill</button>
-            <button id="jsSave">Save</button>
+            <button id="jsSave">save</button>
         </div>
         <div class="controls_colors" id="jsColors">
             <div class="controls_color jsColor" style="background-color:#2c2c2c;"></div>
